controllers + dto