@@ -1,6 +1,5 @@
 package org.zir.dragonieze;
 
-
 import com.fasterxml.jackson.core.JsonProcessingException;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -8,14 +7,12 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
-import org.zir.dragonieze.auth.JwtUtil;
 import org.zir.dragonieze.dragon.Coordinates;
-import org.zir.dragonieze.dragon.Dragon;
-import org.zir.dragonieze.dragon.repo.CoordinatesRepository;
-import org.zir.dragonieze.dragon.repo.DragonRepository;
+import org.zir.dragonieze.dragon.Person;
+import org.zir.dragonieze.dragon.repo.PersonRepository;
 import org.zir.dragonieze.dto.CoordinatesDTO;
+import org.zir.dragonieze.dto.PersonDTO;
 import org.zir.dragonieze.user.User;
-import org.zir.dragonieze.user.UserRepository;
 
 import java.util.List;
 import java.util.Optional;
@@ -24,17 +21,15 @@ import java.util.stream.Collectors;
 @RestController
 @RequiredArgsConstructor
 @CrossOrigin(origins = "*")
-@RequestMapping("/dragon/user/coord")
-public class CoordinatesController extends Controller {
-    private final CoordinatesRepository coordinatesRepository;
-
-
+@RequestMapping("/dragon/user/pers")
+public class PersonController extends Controller {
+    private final PersonRepository personRepository;
 
     @Transactional
-    @PostMapping("/addCoordinates")
-    public ResponseEntity<String> addCoordinates(
+    @PostMapping("/addPerson")
+    public ResponseEntity<String> addPerson(
             @RequestHeader(HEADER_AUTH) String header,
-            @Valid @RequestBody Coordinates coordinates
+            @Valid @RequestBody Person person
     ) throws JsonProcessingException {
         String username = getUsername(header, jwtUtil);
         Optional<User> userOptional = userRepository.findByUsername(username);
@@ -42,14 +37,14 @@ public class CoordinatesController extends Controller {
             return new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND);
         }
         User user = userOptional.get();
-        coordinates.setUser(user);
-        coordinatesRepository.save(coordinates);
-        String json = getJson(new CoordinatesDTO(coordinates));
+        person.setUser(user);
+        personRepository.save(person);
+        String json = getJson(new PersonDTO(person));
         return ResponseEntity.ok(json);
     }
 
-    @GetMapping("/getCoordinates")
-    public ResponseEntity<String> getCoordinates(
+    @GetMapping("/getPersons")
+    public ResponseEntity<String> getPersons(
             @RequestHeader(HEADER_AUTH) String header
     ) throws JsonProcessingException {
         String username = getUsername(header, jwtUtil);
@@ -59,12 +54,11 @@ public class CoordinatesController extends Controller {
             return new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND);
         }
         User user = userOptional.get();
-        List<Coordinates> coordinates = coordinatesRepository.findByUserId(user.getId());
-        List<CoordinatesDTO> coordinatesDTOs = coordinates.stream()
-                .map(CoordinatesDTO::new)
-                .collect(Collectors.toList());
-        String json = getJson(coordinatesDTOs);
-        System.out.println("it's method getCoordinates");
+        List<Person> personList = personRepository.findByUserId(user.getId());
+        List<PersonDTO> personDTOS = personList.stream()
+                .map(PersonDTO::new)
+                .toList();
+        String json = getJson(personDTOS);
         return ResponseEntity.ok(json);
     }
 
